# recursive-test

./: .gitignore  directory_crawler.py  directory_crawler_selenium.py  exclusion_words.txt  pyproject.toml  search_nec_words.txt  search_word.py  search_words.txt  tree_crawler_selenium.py
