[project]
name = "recursive-test"
version = "0.1.0"
description = "A tool for recursively crawling directory listings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "logging>=0.4.9.6",
    "selenium>=4.32.0",
    "requests>=2.32.3",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
]

# 無視するルール
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
